--- a/app/package.json
+++ b/app/package.json
@@ -11,12 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.80.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@tanstack/react-query-devtools": "^5.59.20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
