--- a/.github/workflows/lint_server.yml
+++ b/.github/workflows/lint_server.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Lint server
 
 on: [push]
 
@@ -10,9 +10,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        working-directory: ./app
+        working-directory: ./server
         run: npm ci
 
       - name: Run ESLint
-        working-directory: ./app
+        working-directory: ./server
         run: npm run lint
