--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.59.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "sass": "^1.80.6"
   },
   "devDependencies": {
