--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/x-date-pickers": "^7.22.2",
     "@tanstack/react-query": "^5.59.20",
     "dayjs": "^1.11.13",
