--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/x-date-pickers": "^7.22.2",
     "@tanstack/react-query": "^5.59.20",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
