--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,6 @@
   "name": "server",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
@@ -11,10 +10,15 @@
     "format": "prettier --write 'src/**/*.{ts,tsx,js,json}'"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "firebase-admin": "^13.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
     "eslint": "^9.14.0",
